fixed bio align items center

--- a/Dominic_Knabe_Portfolio_Site/src/scss/base/index.scss
+++ b/Dominic_Knabe_Portfolio_Site/src/scss/base/index.scss
@@ -22,14 +22,16 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
+    align-items: center;
+    justify-items: center;
     img{
-        width: 400px;
-        height: 600px;
+        width: 95vw;
+        height: auto;
     }
     article{
-        height: 400px;
-        border: 2px solid blue;
+        padding: 10px;
+        width: 95vw;
+        background-color: $secondary;
     }
     button{
         cursor: pointer;
@@ -39,13 +41,17 @@ body{
 .bio__p--text{
     padding: 10px;
     height: 250px;
-    border: 2px solid green;
     text-align: justify;
 }
 
 main{
     flex: 1;
-    border: 1px solid black;
+    display: flex;
+    @include flex-center;
+    img{
+        width: 95vw;
+        height: auto;
+    }
 }
 
 
