--- a/Dominic_Knabe_Portfolio_Site/src/scss/utils/_variables.scss
+++ b/Dominic_Knabe_Portfolio_Site/src/scss/utils/_variables.scss
@@ -1,2 +1,2 @@
 $primary: rgb(52, 152, 219);
-$secondory: rgb(46, 204, 113);
+$secondary: rgb(46, 204, 113);
